@@ -1162,3 +1162,8 @@ positions, which allows holodecks to grow to system file size limit.
 
 Fixed wrapping long in source hit test code, which would cause
 odd horizontal lines in some very long renderings.
+
+Added -f and -w options to ra_tiff to create IEEE float and 16-bit/primary
+TIFF output, respectively.  These formats are also understood on reverse
+conversion.  (16-bit/primary has been understood for some time, but not
+IEEE float.)
